# Tema1Paoo

./: CMakeLists.txt  main.cpp
